--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,38 @@ body {
 .sidebar {
     grid-row: 1 / 3;
     grid-column: 1;
-    background-color: aqua;
+    display: grid;
+    grid-template-rows: auto auto 1fr;
+    gap: 15px;
+    background-color: #0074D9;
+}
+
+.sidebar div {
+    color: white;
+    font-size: 16px;
+    font-weight: bold;
+    font-family: sans-serif;
+}
+
+.sidebar div ul {
+    list-style-type: none;
+}
+
+.sidebar-link {
+    padding-bottom: 20px;
+    display: flex;
+    padding: 0 0 20px 7px;
+}
+
+.main-link {
+    padding: 0 0 20px 0;
+    font-size: 24px;
+}
+
+.sidebar-link:hover {
+    cursor: pointer;
+    text-decoration: underline;
+    transform: scale(1.05);
 }
 
 .header {
