--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,18 @@ body {
     grid-row: 1;
     grid-column: 2 / 3;
     background-color: white;
+    font-family: sans-serif;
+    display: grid;
+    grid-template-columns: 1fr auto;
+    grid-template-rows: auto auto;
 }
+
+#search-bar {
+    display: flex;
+
+}
+
+
 
 .main-content {
     grid-row: 2 / 3;
