--- a/styles.css
+++ b/styles.css
@@ -173,4 +173,24 @@ h1 span:hover {
 .main-content {
     grid-row: 2 / 3;
     grid-column: 2 / 3;
+
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+
+}
+
+.project-area {
+    grid-row: 1 / 3;
+}
+
+.project-grid {
+    padding: 10px;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    gap: 10px;
+}
+
+.project-card {
+    background: linear-gradient(to right,#DAA520 0 10px, white 10px 100%);
+    padding-left: 20px;
 }
