--- a/styles.css
+++ b/styles.css
@@ -183,14 +183,55 @@ h1 span:hover {
     grid-row: 1 / 3;
 }
 
+.project-header {
+    padding: 10px 20px;
+    margin: 0;
+}
+
 .project-grid {
-    padding: 10px;
+    padding: 0 20px;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
-    gap: 10px;
+    gap: 30px;
 }
 
 .project-card {
-    background: linear-gradient(to right,#DAA520 0 10px, white 10px 100%);
+    background: linear-gradient(to right,#DAA520 0 15px, white 15px 100%);
     padding-left: 20px;
+    border-radius: 15px;
+    height: 200px;
+    padding: 20px 40px;
+
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
+
+.card-text {
+    font-family: sans-serif;
+    height: 70%;
+    overflow: hidden;
+}
+
+div.card-text > * {
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+}
+
+.card-text h4 {
+    height: auto;
+}
+
+.card-text p {
+    height: 80%;
+    color: rgb(97, 94, 94);
+    font-size: 13px;
+}
+
+.card-buttons {
+    display: flex;
+    justify-content: end;
+}
+
