--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,6 @@ body {
     grid-template-rows: 1fr 4fr;
     width: 100vw;
     height: 100vh;
-    background-color: lightgray;
 }
 
 .sidebar {
@@ -54,6 +53,7 @@ body {
 }
 
 .header {
+
     grid-row: 1;
     grid-column: 2 / 3;
     background-color: white;
@@ -65,6 +65,8 @@ body {
     gap: 20px;
 
     align-items: center;
+    box-shadow: 2px 2px 3px darkgray;
+    z-index: 1;
 }
 
 .header-item {
@@ -171,34 +173,39 @@ h1 span:hover {
 }
 
 .main-content {
+    padding: 30px;
     grid-row: 2 / 3;
     grid-column: 2 / 3;
 
     display: grid;
     grid-template-columns: 3fr 1fr;
-
-}
+    grid-template-rows: 1fr 1fr;
+    background-color: lightgray;
+}   
 
 .project-area {
     grid-row: 1 / 3;
 }
 
 .project-header {
-    padding: 10px 20px;
+    font-family: sans-serif;
+    font-size: 20px;
+    padding-bottom: 10px;
     margin: 0;
 }
 
 .project-grid {
-    padding: 0 20px;
     display: grid;
+    font-family: sans-serif;
     grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
     gap: 30px;
+    padding: 0 20px 0 0;
 }
 
 .project-card {
-    background: linear-gradient(to right,#DAA520 0 15px, white 15px 100%);
+    background: linear-gradient(to right,#DAA520 0 10px, white 10px 100%);
     padding-left: 20px;
-    border-radius: 15px;
+    border-radius: 10px;
     height: 200px;
     padding: 20px 40px;
 
@@ -209,7 +216,6 @@ h1 span:hover {
 }
 
 .card-text {
-    font-family: sans-serif;
     height: 70%;
     overflow: hidden;
 }
@@ -235,3 +241,41 @@ div.card-text > * {
     justify-content: end;
 }
 
+
+.general-shadow {
+    box-shadow: 2px 2px 3px darkgray;
+}
+
+.announcements {
+    font-family: sans-serif;
+}
+
+.divider {
+    height: 1px;
+    width: 100%;
+    background-color: lightgray;
+    margin: 10px 0;
+}
+
+.announcements-text {
+    
+}
+
+.announcements-text h4 {
+    font-size: 14px;
+    margin: 0;
+    padding: 0;
+}
+
+.announcements-text p {
+    font-size: 11px;
+    color: rgb(97, 94, 94);
+    margin: 0;
+    padding: 0;
+}
+
+.slate  {
+    background-color: white;
+    border-radius: 10px;
+    padding: 20px;
+}
