--- a/styles.css
+++ b/styles.css
@@ -186,8 +186,9 @@ h1 span:hover {
 
     display: grid;
     grid-template-columns: 3fr 1fr;
-    grid-template-rows: auto auto;
+    grid-template-rows: auto auto;  
     background-color: lightgray;
+    font-family: sans-serif;
 }   
 
 .project-area {
@@ -254,7 +255,7 @@ div.card-text > * {
 }
 
 .announcements {
-    font-family: sans-serif;
+
 }
 
 .divider {
@@ -290,4 +291,28 @@ div.card-text > * {
     background-color: white;
     border-radius: 10px;
     padding: 20px;
+}
+
+.profile {
+    display: grid;
+    grid-template-columns: auto 1fr;
+    align-items: center;
+    column-gap: 10px;
+    padding-bottom: 20px;
+
+}
+
+.profile img {
+    grid-row: 1 / 3;
+}
+
+.profile h6 {
+    margin: 0;
+    font-size: 12px;
+}
+
+.profile p {
+    margin: 0;
+    font-size: 11px;
+    color: rgb(97, 94, 94);
 }
