--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@ body {
     color: white;
     font-size: 16px;
     font-weight: bold;
-    font-family: sans-serif;
+    font-family: 'Roboto', sans-serif;;
 }
 
 .sidebar div ul {
@@ -57,7 +57,7 @@ body {
     grid-row: 1;
     grid-column: 2 / 3;
     background-color: white;
-    font-family: sans-serif;
+    font-family: 'Roboto', sans-serif;;
 
     display: grid;
     grid-template-columns: 1fr auto;
@@ -188,7 +188,7 @@ h1 span:hover {
     grid-template-columns: 3fr 1fr;
     grid-template-rows: auto auto;  
     background-color: lightgray;
-    font-family: sans-serif;
+    font-family: 'Roboto', sans-serif;;
 }   
 
 .project-area {
@@ -196,7 +196,7 @@ h1 span:hover {
 }
 
 .project-header {
-    font-family: sans-serif;
+    font-family: 'Roboto', sans-serif;;
     font-size: 20px;
     padding-bottom: 10px;
     margin: 0;
@@ -204,7 +204,7 @@ h1 span:hover {
 
 .project-grid {
     display: grid;
-    font-family: sans-serif;
+    font-family: 'Roboto', sans-serif;;
     grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
     gap: 30px;
     padding: 0 20px 0 0;
