--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,9 @@ body {
     margin: 0;
 }
 
+svg {
+}
+
 .container {
     display: grid;
     grid-template-columns: 1fr 4fr;
@@ -38,7 +41,20 @@ body {
 .sidebar-link {
     padding-bottom: 20px;
     display: flex;
+    align-items: center;
     padding: 0 0 20px 7px;
+}
+
+.sidebar-link svg {
+    fill: white;
+    margin-right: 8px;
+    width: 20px;
+    height: 20px;
+}
+
+.sidebar-link .svg-large {
+    width: 43px;
+    height: 43px;
 }
 
 .main-link {
@@ -75,6 +91,12 @@ body {
 
 .header-item:nth-child(even) {
     padding-right: 60px;
+}
+
+.header svg {
+    width: 20px;
+    height: 20px;
+    display: block;
 }
 
 #search {
